force-app/main/default/objects/sugati__Supplier_Booking__c/sugati__Supplier_Booking__c.object-meta.xml
<CustomObject>
    <description>Booking Options. All elements are stored here because Itinerary options are coming out in itemised way.</description>
    <label>Supplier Booking</label>
    <nameField>
        <displayFormat>SB-{0000000000}</displayFormat>
        <label>Supplier Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Booking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>