force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__Action_Required__c.field-meta.xml
<CustomField>
    <fullName>sugati__Action_Required__c</fullName>
    <label>Action Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>