force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__Linked_Services_Extra_Item__c.field-meta.xml
<CustomField>
    <fullName>sugati__Linked_Services_Extra_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Linked Services &amp; Extra Item</label>
    <referenceTo>sugati__Linked_Services_Extra_Item__c</referenceTo>
    <relationshipLabel>Supplier Booking</relationshipLabel>
    <relationshipName>Supplier_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>