force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Alert_Flight_Notification__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Alert_Flight_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alert Flight Notification</label>
    <type>Checkbox</type>
</CustomField>