force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Apply_Agency_Comm_to_Price_Adjust__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Apply_Agency_Comm_to_Price_Adjust__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Agency Comm to Price Adjustment</label>
    <type>Checkbox</type>
</CustomField>