force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Client_Group_Lookup__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Client_Group_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to client group for associated an extra with a booking (client group) on a multi-person tour booking</description>
    <inlineHelpText>Lookup to client group for associated an extra with a booking (client group) on a multi-person tour booking</inlineHelpText>
    <label>Client Group (Lookup)</label>
    <referenceTo>sugati__Client_Group__c</referenceTo>
    <relationshipLabel>Supplier Bookings</relationshipLabel>
    <relationshipName>Supplier_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>