force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Considered_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Considered_Suppliers__c</fullName>
    <description>Comma-separated list of suppliers under consideration, prior to selecting rates.</description>
    <inlineHelpText>Comma-separated list of suppliers under consideration, prior to selecting rates.</inlineHelpText>
    <label>Considered Suppliers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>