force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Contains_Invalid_Rates__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Contains_Invalid_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Invalid Rates</label>
    <type>Checkbox</type>
</CustomField>