force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Costing_Breakdown_Level__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Costing_Breakdown_Level__c</fullName>
    <description>Captures whether the costs will be entered at an Individual, Client Group or Booking Level.</description>
    <inlineHelpText>Captures whether the costs will be entered at an Individual, Client Group or Booking Level.</inlineHelpText>
    <label>Costing Breakdown Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Client Group</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>