force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Excursion_Categories__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Excursion_Categories__c</fullName>
    <label>Excursion Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__Excursion_Categories</valueSetName>
    </valueSet>
</CustomField>