force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Flight_Alert__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Flight_Alert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight Alert</label>
    <referenceTo>sugati__Flight_Alert__c</referenceTo>
    <relationshipLabel>Supplier Booking</relationshipLabel>
    <relationshipName>Supplier_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>