force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Flight_Duration__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Flight_Duration__c</fullName>
    <description>Flight Duration (In Minutes)</description>
    <label>Flight Duration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>