force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Flight_Info_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Flight_Info_Sync_Date__c</fullName>
    <label>Flight Info Sync Date</label>
    <type>DateTime</type>
</CustomField>