force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Flight_Operator__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Flight_Operator__c</fullName>
    <label>Flight Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>