force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Flight_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Flight_Status__c</fullName>
    <label>Flight Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Diverted</fullName>
            </value>
            <value>
                <fullName>Data Source Needed</fullName>
            </value>
            <value>
                <fullName>Landed</fullName>
            </value>
            <value>
                <fullName>Not Operational</fullName>
            </value>
            <value>
                <fullName>Redirected</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>