force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_From_Place_Location__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_From_Place_Location__c</fullName>
    <formula>IF(NOT(ISBLANK(sugati__S_SB_From_Supplier__c)), 
    sugati__S_SB_From_Supplier__r.Name, 
    IF (NOT(ISBLANK(sugati__SB_Departure_Airport_l__c)), 
        sugati__SB_Departure_Airport_l__r.Name, 
        IF (NOT(ISBLANK(sugati__SB_Where_to_go__c)), 
            sugati__SB_Where_to_go__r.Name, 
            &quot;&quot;
        )
    )
)</formula>
    <label>From Place Location</label>
    <type>Text</type>
</CustomField>