force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_From_Time__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_From_Time__c</fullName>
    <description>From Time (time field)</description>
    <label>From Time</label>
    <type>Time</type>
</CustomField>