force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Hide_From_PDF_Section__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Hide_From_PDF_Section__c</fullName>
    <label>Hide From PDF Section</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Itinerary At A Glance</fullName>
            </value>
            <value>
                <fullName>Day By Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>