force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Is_Location_TOMs_Applicable__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Is_Location_TOMs_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Location TOMs Applicable</label>
    <type>Checkbox</type>
</CustomField>