force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Linked_Services_Extra_Item_Summary__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Linked_Services_Extra_Item_Summary__c</fullName>
    <label>Linked Services and Extra Item Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>