force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Margin_Before_Agency_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Margin_Before_Agency_Commission__c</fullName>
    <formula>sugati__S_SB_Total_Profit_Booking_Currency__c /  sugati__S_SB_Total_Gross_Sell_Price_Booking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin (Before Agency Commission)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>