force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Opportunity_is_locked__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Opportunity_is_locked__c</fullName>
    <formula>sugati__SB_Opportunity__r.sugati__O_Lock__c</formula>
    <label>Opportunity is locked</label>
    <type>Checkbox</type>
</CustomField>