force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Option_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Option_Name__c</fullName>
    <description>Stores the name of the option if this supplier booking is an option</description>
    <label>Option Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>