force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Option_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Option_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Used when there are multiple options for this date across supplier bookings</description>
    <label>Option Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>