force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Price_Adjustment_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Price_Adjustment_Category__c</fullName>
    <description>Categories for Price Adjustments</description>
    <label>Price Adjustment Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Administration Fee</fullName>
            </value>
            <value>
                <fullName>Exchange Rate Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>