force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Price_Adjustment_Detail__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Price_Adjustment_Detail__c</fullName>
    <description>Detail for Price Adjustment</description>
    <label>Price Adjustment Detail</label>
    <type>TextArea</type>
</CustomField>