force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Price_Adjustment_in_Corporate_Curr__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Price_Adjustment_in_Corporate_Curr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Adjustment in Corporate Currency</label>
    <type>Checkbox</type>
</CustomField>