force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Record_Type_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>