force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Reference_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Reference_URL__c</fullName>
    <label>Reference URL</label>
    <type>Url</type>
</CustomField>