force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Related_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To</label>
    <referenceTo>sugati__Supplier_Booking__c</referenceTo>
    <relationshipLabel>Supplier Booking</relationshipLabel>
    <relationshipName>Related_Supplier_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>