force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Service_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Service_Description__c</fullName>
    <label>Service Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>