force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Ship__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Ship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Supplier Booking (Ship)</relationshipLabel>
    <relationshipName>SupplierBookings</relationshipName>
    <type>Lookup</type>
</CustomField>