force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Smart_Compose__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Smart_Compose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smart Compose</label>
    <type>Checkbox</type>
</CustomField>