force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Supplier_Booking_Choice__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Supplier_Booking_Choice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Booking Choice</label>
    <referenceTo>sugati__Supplier_Booking_Choice__c</referenceTo>
    <relationshipLabel>Supplier Bookings</relationshipLabel>
    <relationshipName>Supplier_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>