force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Supplier_Commission_Term__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Supplier_Commission_Term__c</fullName>
    <label>Supplier Commission Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
                <default>true</default>
                <label>Immediate</label>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>