force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Supplier_Costs_Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Supplier_Costs_Total_Quantity__c</fullName>
    <label>Supplier Costs Total Quantity</label>
    <summarizedField>sugati__Supplier_Cost__c.sugati__SC_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>sugati__Supplier_Cost__c.sugati__SC_Selected__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Supplier_Cost__c.sugati__SC_Supplier_Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>