force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Template_Supplier_Booking_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Template_Supplier_Booking_Id__c</fullName>
    <description>Internal use only: If the opportunity was cloned from an FIT template, then store the supplier booking id from the template opportunity here.</description>
    <label>Template Supplier Booking Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>