force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Tiered_Rates__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Tiered_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiered Rates</label>
    <type>Checkbox</type>
</CustomField>