force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_To_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_To_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Supplier Booking (To Supplier)</relationshipLabel>
    <relationshipName>Supplier_Bookings_To</relationshipName>
    <type>Lookup</type>
</CustomField>