force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_To_Time__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_To_Time__c</fullName>
    <description>To Time (time field)</description>
    <label>To Time</label>
    <type>Time</type>
</CustomField>