force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_To_Where_to_go__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_To_Where_to_go__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Where to go</label>
    <referenceTo>sugati__Where_to_go__c</referenceTo>
    <relationshipLabel>Supplier Bookings (To)</relationshipLabel>
    <relationshipName>Supplier_Bookings_to</relationshipName>
    <type>Lookup</type>
</CustomField>