force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Toms_Applicable_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Toms_Applicable_Value__c</fullName>
    <label>Toms Applicable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>