force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Total_Agent_Commission_Due__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Total_Agent_Commission_Due__c</fullName>
    <description>The sum of all Agent Commission Due</description>
    <label>Total Agent Commission Due</label>
    <summarizedField>sugati__Supplier_Cost__c.sugati__S_SC_Agent_Commission_Due__c</summarizedField>
    <summaryForeignKey>sugati__Supplier_Cost__c.sugati__SC_Supplier_Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>