force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Total_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Total_Cancellation__c</fullName>
    <label>Total Cancellation (Booking Currency)</label>
    <summarizedField>sugati__Supplier_Cost__c.sugati__S_SC_Cancellation_Charges_Booking__c</summarizedField>
    <summaryForeignKey>sugati__Supplier_Cost__c.sugati__SC_Supplier_Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>