force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Total_Gross_Sell_Price_PP_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Total_Gross_Sell_Price_PP_Booking__c</fullName>
    <label>Total Gross Sell Price PP (Booking)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>