force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Total_Net_Cost_Supplier_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Total_Net_Cost_Supplier_Currency__c</fullName>
    <description>Sum of all Net Cost in Supplier Currency</description>
    <label>Total Net Cost (Supplier Currency)</label>
    <summarizedField>sugati__Supplier_Cost__c.sugati__S_SC_Net_Cost_Supplier_Currency__c</summarizedField>
    <summaryForeignKey>sugati__Supplier_Cost__c.sugati__SC_Supplier_Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>