force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Total_Net_Sell_Price_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Total_Net_Sell_Price_Booking__c</fullName>
    <description>Sum of all Net Sell Price in Booking Currency</description>
    <label>Total Net Sell Price (Booking Currency)</label>
    <summarizedField>sugati__Supplier_Cost__c.sugati__S_SC_Net_Sell_Price_Booking_Currency__c</summarizedField>
    <summaryForeignKey>sugati__Supplier_Cost__c.sugati__SC_Supplier_Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>