force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Total_Profit_Agency_Comm_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Total_Profit_Agency_Comm_Supplier__c</fullName>
    <description>Sum of all Profit after Agency Commission in Supplier Currency</description>
    <label>Total Profit - Agency Comm (Supplier)</label>
    <summarizedField>sugati__Supplier_Cost__c.sugati__S_SC_Profit_Agency_Commission_Supplier__c</summarizedField>
    <summaryForeignKey>sugati__Supplier_Cost__c.sugati__SC_Supplier_Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>