force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Tour_Highlight__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Tour_Highlight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tour Highlight</label>
    <type>Checkbox</type>
</CustomField>