force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Tour_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Tour_Id__c</fullName>
    <description>This will be populated if this supplier booking is on a tour booking.</description>
    <formula>sugati__SB_Opportunity__r.sugati__O_Tour__c</formula>
    <label>Tour Id</label>
    <type>Text</type>
</CustomField>