force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__S_SB_Word_Counts__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SB_Word_Counts__c</fullName>
    <label>Word Counts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>