force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Apply_Discount__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Apply_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Discount</label>
    <type>Checkbox</type>
</CustomField>